# PyForge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  README.md  SECURITY.md  mypy.ini  package-lock.json  package_desc.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  other.yml  refactor-code.yml
.github/workflows/: frontend.yml  (+13 more)
frontend/: README.md
taipy/: __init__.py  _entrypoint.py  _run.py
taipy/common/: INSTALLATION.md  README.md  __init__.py  package_desc.md  pyproject.toml  setup.py
taipy/common/_cli/: _create_cli.py  _create_cli_factory.py  _help_cli.py  _run_cli.py
taipy/common/_cli/_base_cli/: _abstract_cli.py  _taipy_parser.py
taipy/common/config/: __init__.py  config.py  config.pyi  section.py  unique_section.py
taipy/common/config/_config_comparator/: _config_comparator.py
taipy/common/config/_serializer/: _base_serializer.py
taipy/common/config/common/: _config_blocker.py
taipy/common/config/exceptions/: __init__.py  exceptions.py
taipy/common/config/stubs/: generate_pyi.py  pyi_header.py
taipy/common/logger/: _taipy_logger.py
taipy/templates/: README.md  package_desc.md  pyproject.toml  setup.py
taipy/templates/default/: cookiecutter.json
taipy/templates/default/hooks/: post_gen_project.py
taipy/templates/default/{{cookiecutter.__root_folder}}/configuration/: config.py
taipy/templates/default/{{cookiecutter.__root_folder}}/pages/: root.py
taipy/templates/default/{{cookiecutter.__root_folder}}/pages/page_example/: page_example.py
taipy/templates/default/{{cookiecutter.__root_folder}}/sections/: import.txt
taipy/templates/sdm/: cookiecutter.json
taipy/templates/sdm/hooks/: post_gen_project.py
taipy/templates/sdm/{{cookiecutter.__root_folder}}/: .gitignore  {{cookiecutter.__main_file}}.py
taipy/templates/sdm/{{cookiecutter.__root_folder}}/config/: config.py  config_with_toml.py
taipy/templates/sdm/{{cookiecutter.__root_folder}}/pages/: root.py
taipy/templates/sdm/{{cookiecutter.__root_folder}}/pages/job_page/: job_page.py
taipy/templates/sdm/{{cookiecutter.__root_folder}}/pages/scenario_page/: data_node_management.py  scenario_page.py
tests/: __init__.py  conftest.py  test_run.py
tools/: coverage_check.py  validate_taipy_install.py
(+926 files in other folders)
