[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforge-templates"
description = "An open-source package holding PyForge application templates."
readme = "package_desc.md"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
authors = [{name = "Avaiga", email = "dev@pyforge.io"}]
keywords = ["pyforge-templates"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages]
find = {include = ["pyforge"]}

[project.urls]
homepage = "https://github.com/avaiga/pyforge"
